--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Java</string>
+    <string name="SAMPLE_APP_ID">ca-app-pub-3940256099942544~3347511713</string>
 </resources>
